[package]
name = "kam"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.36.0", features = ["rt", "macros", "rt-multi-thread"] }
sqlx = { version = "0.7.3", features = ["sqlite", "macros", "migrate", "time", "bigdecimal", "runtime-tokio", "tls-rustls"] }
futures = "0.3.30"
ratatui = "0.26.0"
crossterm = "0.27.0"
